Fix search keyword on equipments component and paginaton update on euqipments-list